Changed CSS to avoid overlapping

--- a/src/contactMe/ContactMe.css
+++ b/src/contactMe/ContactMe.css
@@ -2,8 +2,7 @@
     height: 50vh;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 25%;
-    padding-top: 10%;
+    padding-top: 20%;
 }
 
 .main-contact h2{
@@ -33,9 +32,35 @@
     fill: white;
     width:30px;
 }
-
-@media screen and (max-width: 600px) {
+/*Mobile Breakpoint*/
+@media screen and (min-width:320px) and  (max-width: 480px) {
     .main-contact{
-        padding-top:20%;
+        margin-top:150%;
     }
 }
+
+/*Tab Breakpoint*/
+@media screen and (min-width:481px) and (max-width: 768px) {
+    .main-contact{
+        margin-top:125%;
+    }
+}
+/*Desktop Breakpoint*/
+@media screen and (min-width:769px) and (max-width: 1024px) {
+    .main-contact{
+        margin-top:75%;
+    }
+}
+/*XL Breakpoint*/
+@media screen and (min-width:1025px) {
+    .main-contact{
+        margin-top:25%;
+    }
+}
+/* 
+@media screen and (max-width: 600px) {
+    .main-contact{
+        margin-top:150%;
+    }
+} */
+
